[project]
name = "lmstudio-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lmstudio>=1.5.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "six>=1.16.0",
    "gradio>=5.49.1",
]
